fix(FSADT1-1442): fixed spacing for external

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1962,7 +1962,7 @@ div.internal-grouping-01:has(svg.warning) span.body-compact-01 {
     min-width: 66rem;
   }
 
-  div.content:has(div.frame-03 svg.submission-badge) {
+  div.content:has(div.staff svg.submission-badge) {
     margin-left: 16rem;
   }
 
